--- a/tekpubTodo/tekpubTodo/en.lproj/ViewController.xib
+++ b/tekpubTodo/tekpubTodo/en.lproj/ViewController.xib
@@ -55,6 +55,7 @@
 						<bool key="IBUIAlwaysBounceVertical">YES</bool>
 						<int key="IBUISeparatorStyle">1</int>
 						<int key="IBUISectionIndexMinimumDisplayRowCount">0</int>
+						<bool key="IBUIAllowsSelectionDuringEditing">YES</bool>
 						<bool key="IBUIShowsSelectionImmediatelyOnTouchBegin">YES</bool>
 						<float key="IBUIRowHeight">44</float>
 						<float key="IBUISectionHeaderHeight">22</float>
@@ -77,7 +78,7 @@
 							<object class="IBUINavigationItem" id="428225347">
 								<reference key="IBUINavigationBar" ref="685096573"/>
 								<string key="IBUITitle">Todo</string>
-								<object class="IBUIBarButtonItem" key="IBUILeftBarButtonItem" id="30430660">
+								<object class="IBUIBarButtonItem" key="IBUILeftBarButtonItem" id="874200785">
 									<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 									<int key="IBUIStyle">1</int>
 									<reference key="IBUINavigationItem" ref="428225347"/>
@@ -172,7 +173,7 @@
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchEventConnection" key="connection">
 						<string key="label">editButtonPushed</string>
-						<reference key="source" ref="30430660"/>
+						<reference key="source" ref="874200785"/>
 						<reference key="destination" ref="372490531"/>
 					</object>
 					<int key="connectionID">60</int>
@@ -352,7 +353,7 @@
 						<reference key="object" ref="428225347"/>
 						<array class="NSMutableArray" key="children">
 							<reference ref="699931799"/>
-							<reference ref="30430660"/>
+							<reference ref="874200785"/>
 						</array>
 						<reference key="parent" ref="685096573"/>
 					</object>
@@ -383,7 +384,7 @@
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">59</int>
-						<reference key="object" ref="30430660"/>
+						<reference key="object" ref="874200785"/>
 						<reference key="parent" ref="428225347"/>
 					</object>
 				</array>
