--- a/tekpubTodo/tekpubTodo/tekpubEditorController.xib
+++ b/tekpubTodo/tekpubTodo/tekpubEditorController.xib
@@ -71,6 +71,10 @@
 						<reference key="NSNextKeyView" ref="96577404"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
+						<object class="NSColor" key="IBUITintColor">
+							<int key="NSColorSpace">1</int>
+							<bytes key="NSRGB">MC4wNjczODk4MjM0NSAwLjI5OTk0MjczNTYgMC4wOTU0MzExODUzAA</bytes>
+						</object>
 						<array key="IBUIItems">
 							<object class="IBUINavigationItem" id="560334081">
 								<reference key="IBUINavigationBar" ref="854780756"/>
